first working version from the side-by-side diff view

--- a/access/templates/access/diff_block.html
+++ b/access/templates/access/diff_block.html
@@ -1,23 +1,27 @@
 {% load i18n %}
-<div class="container">
+<div class="container-fluid">
     {% for res in results %}
+
     <div class="row">
         {% if res.fail %}
-        <div class="alert alert-danger"><strong>Failed: </strong> {{ res.description }} </div>
+        <div class="alert alert-danger" style="margin-left:1em; margin-right:1em"><strong>Test Failed: </strong> {{ res.description }} </div>
         {% else %}
-        <div class="alert alert-success"><strong>Passed: </strong> {{ res.description }} </div>
+        <div class="alert alert-success" style="margin-left:1em; margin-right:1em"><strong>Test Passed: </strong> {{ res.description }} </div>
         {% endif %}
      </div>
-    <div class="row">
 
+    {% if res.fail %}
+    <div class="row">
         <div class="col-xs-6">
             <h4>{% trans "Your program" %}</h4>
-            <pre>res.actual</pre>
+            <pre>{{res.actual}}</pre>
         </div>
         <div class="col-xs-6">
             <h4>{% trans "Model program" %}</h4>
-            <pre>res.expected</pre>
+            <pre>{{res.expected}}</pre>
         </div>
     </div>
+    {% endif %}
+    <hr> 
     {% endfor %}
 </div>
